src/app/projects/projects-page/project-list-item/project-list-item.component.scss
@use 'breakpoints';
@use 'content';
@use 'margins';
@use 'paddings';
@use 'page';
@use 'typographies';

:host {
  display: flex;
  flex-direction: column;
  gap: margins.$m;

  .text-and-images {
    display: flex;
    align-content: flex-start;
    gap: margins.$l;
  }

  $texts-width-big-screen: 55ch;

  .texts {
    display: flex;
    flex-direction: column;
  }

  //👇 Keep in sync with component responsive images
  app-images-swiper {
    // 👇 Seems swiper needs size set to work fine
    width: calc(100% - $texts-width-big-screen);
    $extra-space: 48px;
    $available-height: content.$available-height;
    max-height: calc($available-height);
  }

  @include breakpoints.until-s {
    .text-and-images {
      flex-wrap: wrap;
      gap: margins.$m;
    }

    .texts {
      order: 2;
    }

    app-images-swiper {
      width: 100%;
      order: 1;

      $extra-space: 128px;
      $available-height: content.$available-height-with-header;
      max-height: calc($available-height - $extra-space);
    }
  }

  .title {
    @include typographies.size(8);
    @include typographies.bold;

    margin-bottom: margins.$xxs;
  }

  .subtitle {
    @include typographies.size(4);
    @include typographies.bold;

    margin-bottom: margins.$l;
  }

  .quote {
    @include typographies.size(1);
    @include typographies.regular;

    margin-bottom: margins.$l;
  }

  .description {
    @include typographies.light;

    // Keep line breaks
    white-space: pre-wrap;
  }

  .credits {
    @include typographies.regular;

    display: flex;
    flex-wrap: wrap;
    gap: margins.$s;
    justify-content: flex-start;

    .anchor {
      display: inline-block;
    }
  }
}

